# llvm-test-suite

MicroBenchmarks/: CMakeLists.txt
MultiSource/Applications/: CMakeLists.txt
MultiSource/Benchmarks/DOE-ProxyApps-C++/: CMakeLists.txt
MultiSource/UnitTests/C++11/: CMakeLists.txt
SingleSource/Benchmarks/Dhrystone/: CMakeLists.txt
SingleSource/Benchmarks/Linpack/: CMakeLists.txt
SingleSource/Benchmarks/Misc/: CMakeLists.txt
SingleSource/Benchmarks/Misc-C++/: CMakeLists.txt
SingleSource/Benchmarks/Misc-C++-EH/: CMakeLists.txt
SingleSource/Benchmarks/Misc-C++/Large/: CMakeLists.txt
SingleSource/Benchmarks/Polybench/linear-algebra/kernels/: CMakeLists.txt
SingleSource/Benchmarks/Polybench/linear-algebra/solvers/: CMakeLists.txt
SingleSource/Benchmarks/Polybench/medley/: CMakeLists.txt
SingleSource/Benchmarks/Polybench/stencils/: CMakeLists.txt
SingleSource/Regression/C/: CMakeLists.txt
SingleSource/Regression/C/gcc-c-torture/execute/: CMakeLists.txt
SingleSource/UnitTests/: CMakeLists.txt
SingleSource/UnitTests/Vector/: CMakeLists.txt
cmake/caches/: kvx-clusteros-iss-O0-g.cmake  kvx-clusteros-iss-O3.cmake
cmake/modules/: DetectArchitecture.c
litsupport/modules/: timeit.py
tools/: CMakeLists.txt
