add_subdirectory(3mm) # 1500s timeout
add_subdirectory(2mm) # 1500s timeout
add_subdirectory(atax) # 1500s timeout
add_subdirectory(trmm) # 1500s timeout
add_subdirectory(syr2k) # 1500s timeout
add_subdirectory(gesummv) # 1500s timeout
add_subdirectory(trisolv) # 1500s timeout
add_subdirectory(syrk) # 1500s timeout
add_subdirectory(doitgen) # 1500s timeout
add_subdirectory(symm) # 1500s timeout
add_subdirectory(mvt) # 1500s timeout
add_subdirectory(cholesky) # 1500s timeout
add_subdirectory(bicg) # 1500s timeout
add_subdirectory(gemver) # 1500s timeout
add_subdirectory(atax)
add_subdirectory(bicg)
add_subdirectory(cholesky)
add_subdirectory(doitgen)
add_subdirectory(gemver)
add_subdirectory(gesummv)
add_subdirectory(mvt)
add_subdirectory(symm)
add_subdirectory(syr2k)
add_subdirectory(syrk)
add_subdirectory(trisolv)
add_subdirectory(trmm)
